--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 
-html {
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
   font-size: 2vh;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
+  min-height: 100vh;
+  display: flex;
 }
